@@ -4,8 +4,8 @@ import struct
 import spectra
 
 
-ZOOM_4X, ZOOM_NORMAL, ZOOM_2X, ZOOM_8X, ZOOM_16X, ZOOM_32X = range(6)
-# ZOOM_OUT_4X, ZOOM_NORMAL, ZOOM_OUT_2X, ZOOM_OUT_8X, ZOOM_OUT_16X, ZOOM_OUT_32X = range(6)
+ZOOM_NORMAL, ZOOM_4X, ZOOM_2X, ZOOM_OUT_2X, ZOOM_OUT_4X, ZOOM_OUT_8X = range(6)
+# ZOOM_OUT_4X, ZOOM_NORMAL, , ZOOM_OUT_16X, ZOOM_OUT_32X = range(6)
 BPP_8, BPP_24, BPP_32 = 8, 24, 32
 TEMPERATE, ARCTIC, TROPICAL, TOYLAND = 1, 2, 4, 8
 NO_CLIMATE, ALL_CLIMATES = 0, TEMPERATE | ARCTIC | TROPICAL | TOYLAND
